syntax = "proto3";

option csharp_namespace = "ZeafloServer.Proto.Posts";

enum Visibility {
     Public = 0;
     Friends = 1;
     Private = 2;
}

message GrpcPost {
  string id = 1;
  string userId = 2;
  string title = 3;
  string content = 4;
  string thumbnailUrl = 5;
  Visibility visibility = 6;
  bool isDeleted = 7;
}

message GetPostsByIdsResult {
  repeated GrpcPost posts = 1;
}

message GetPostsByIdsRequest {
  repeated string ids = 1;
}