syntax = "proto3";

option csharp_namespace = "ZeafloServer.Proto.Posts";

import "Posts/Models.proto";

service PostsApi {
  rpc GetByIds(GetPostsByIdsRequest) returns (GetPostsByIdsResult);
}
